--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <activity
             android:name=".VPTextViewExample"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".VPImageViewExample"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
