--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity
             android:name=".VPNoDataExample"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".VPSpinnerExample"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
