Added VPEditText Custom Font Support VPTextView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:name=".VPSpinnerExample"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".VPEditTextExample"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
