--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.VPEasyWidgetSample">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +42,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".VPCaptchaExample"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".VPAutoCompleteExample"
             android:screenOrientation="portrait" />
     </application>
 
